# ros2_brazoPG

./: README.md  memoriaProcedural.lisp  report.txt
install/: local_setup.sh  setup.sh
install/arlo_gp_controller/lib/arlo_gp_controller/: corriente_dorsal  cortezaParietal  cortezaSomatosensorial  main  runBest
install/arlo_gp_controller/share/arlo_gp_controller/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arlo_interfaces/share/arlo_interfaces/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/arlo_mejorado/share/arlo_mejorado/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/arlo_mejorado/share/arlo_mejorado/cmake/: arlo_mejoradoConfig.cmake
install/arlo_mejorado/share/arlo_mejorado/launch/: xolobot_arm_control.launch.py
install/arlo_mejorado/share/arlo_mejorado/models/arlodrive/: xolobot_arm.sdf
install/arlo_nn_controller/share/arlo_nn_controller/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/arlo_control/: CMakeLists.txt  package.xml
src/arlo_control/config/: xolobot_control.yaml
src/arlo_gp_controller/: setup.py
src/arlo_gp_controller/arlo_gp_controller/: cortezaParietal.py  cortezaSomatosensorial.py  main.py
src/arlo_mejorado_precision_llantas/arlo_mejorado/: CMakeLists.txt
src/arlo_nn_controller/: CMakeLists.txt  package.xml
src/arlo_nn_controller/src/: SimulationController.cpp  SimulationController.h  startServerNode.cpp
(+94 files in other folders)
